1.对配置项cancelToken添加throwIfRequested方法，当添加了该配置项的请求已经执行过cancel时，再此请求直接抛出异常。2.添加withCredentials配置，当配置了该配置项时对xhr实例添加该配置并设置为true，这样在跨域请求时可携带请求地址的cookie值。

--- a/package.json
+++ b/package.json
@@ -126,5 +126,8 @@
     "webpack": "^4.28.4",
     "webpack-dev-middleware": "^3.5.0",
     "webpack-hot-middleware": "^2.24.3"
+  },
+  "dependencies": {
+    "cookie-parser": "^1.4.4"
   }
 }
