1.添加自定义合法状态码功能，可定义返回码在多少区间内是正确返回。2.添加自定义参数序列化功能，可自定义函数用于序列化参数。3.添加baseURL功能，若配置该项，可为所有请求地址添加baseURL。4.实现axios.all与axios.spread静态方法。5.为helpers目录中的辅助代码编写测试代码。

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,11 +12,15 @@
     "emitDecoratorMetadata": true,
     "declarationDir": "dist/types",
     "outDir": "dist/lib",
+    "types": ["node", "jest"],
     "typeRoots": [
       "node_modules/@types"
     ]
   },
   "include": [
-    "src"
+    "src",
+    "./src",
+    "./test",
+    "**/*.spec.ts"
   ]
 }
