--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,15 +12,11 @@
     "emitDecoratorMetadata": true,
     "declarationDir": "dist/types",
     "outDir": "dist/lib",
-    "types": ["node", "jest"],
     "typeRoots": [
       "node_modules/@types"
     ]
   },
   "include": [
-    "src",
-    "./src",
-    "./test",
-    "**/*.spec.ts"
+    "src"
   ]
 }
